[PowerApps] Localization hand-back [CTAS - RunID=20240229-192244-bmdbpsmgm4]

--- a/src/strings/DataverseResources.bg-BG.resx
+++ b/src/strings/DataverseResources.bg-BG.resx
@@ -164,6 +164,10 @@
     <value>{0} не се поддържа в колони за формули, вместо това използвайте {1}.</value>
     
   </data>
+  <data name="FormulaColumns_FunctionSupportDisabled" xml:space="preserve">
+    <value>{0} не се поддържа за колони за формули.</value>
+    
+  </data>
   <data name="FormulaColumns_OperationNotSupported" xml:space="preserve">
     <value>Тази операция не може да се извърши спрямо тип {0} в колони за формули.</value>
     
