--- a/src/strings/DataverseResources.fr-FR.resx
+++ b/src/strings/DataverseResources.fr-FR.resx
@@ -164,6 +164,10 @@
     <value>{0} n’est pas pris en charge dans les colonnes de formule, utilisez {1} plutôt.</value>
     
   </data>
+  <data name="FormulaColumns_FunctionSupportDisabled" xml:space="preserve">
+    <value>{0} n’est pas prise en charge dans les colonnes de formule.</value>
+    
+  </data>
   <data name="FormulaColumns_OperationNotSupported" xml:space="preserve">
     <value>Impossible d’effectuer cette opération sur le type {0} dans les colonnes de formules.</value>
     
