--- a/src/strings/DataverseResources.ko-KR.resx
+++ b/src/strings/DataverseResources.ko-KR.resx
@@ -164,6 +164,10 @@
     <value>{0}은(는) 수식 열에 지원되지 않습니다. 대신 {1}을(를) 사용하세요.</value>
     
   </data>
+  <data name="FormulaColumns_FunctionSupportDisabled" xml:space="preserve">
+    <value>{0} 함수는 수식 열에서 지원되지 않습니다.</value>
+    
+  </data>
   <data name="FormulaColumns_OperationNotSupported" xml:space="preserve">
     <value>이 작업은 수식 열의 {0} 유형에 대해 수행할 수 없습니다.</value>
     
