--- a/src/strings/DataverseResources.en-US.resx
+++ b/src/strings/DataverseResources.en-US.resx
@@ -221,7 +221,7 @@
     <comment>Error Message. Used in formula columns for a formula that uses currency fields directly expression.</comment>
   </data>
   <data name="FormulaColumns_RelatedEntityOptionSetNotSupported" xml:space="preserve">
-    <value>The result type OptionSet '{0}' from related tables is not currently supported in formula columns.</value>
+    <value>The Option Set with name {0} from related tables is not currently supported in formula columns.</value>
     <comment>Error Message. Used in formula columns for a formula that uses OptionSet from related tables.</comment>
   </data>
   <data name="FormulaColumns_InvalidOptionSet" xml:space="preserve">
