Support Optionsets in formula fields (#202)
* Support Optionsets in formula fields

* fixed testcase

* adding formula field dependency with local optionset field

* optionset changes for formula fields

* added ResultTypeNotSupported error

* update

* add comments

* str funcs changes

* add tests and address comments

* OptionSetToText changes

* dependency changes

* fcb changes

* Revert "fcb changes"

This reverts commit 9d758399df7b6a3c3aee6a35217e77035b083f17.

* update dependent opset ids and comments

* fcb changes

* fcb

* address comments

* address comments.

* Update FullTests.cs

* address comments

* update error

* Update FullTests.cs

* update

* fcb changes and new error msg.

* Value(optionsetvaluetype) support and backingkind changes

* boolean optionset and related entity optionset updates

* revert numeric backing changes

* address comments

* empty guid check

* address comments

* address comments

--- a/src/strings/DataverseResources.en-US.resx
+++ b/src/strings/DataverseResources.en-US.resx
@@ -220,4 +220,16 @@
     <value>Direct use of currency fields is not yet supported. Use Decimal(CurrencyField) as a workaround but note that decimal has a smaller range than currency.</value>
     <comment>Error Message. Used in formula columns for a formula that uses currency fields directly expression.</comment>
   </data>
+  <data name="FormulaColumns_RelatedEntityOptionSetNotSupported" xml:space="preserve">
+    <value>The Option Set with name {0} from related tables is not currently supported in formula columns.</value>
+    <comment>Error Message. Used in formula columns for a formula that uses OptionSet from related tables.</comment>
+  </data>
+  <data name="FormulaColumns_InvalidOptionSet" xml:space="preserve">
+    <value>The metadata for the Option Set with name {0} was not found.</value>
+    <comment>Error Message. Used in formula columns when optionset info is not found.</comment>
+  </data>
+  <data name="FormulaColumns_ResultFromMultipleOptionSetsNotSupported" xml:space="preserve">
+    <value>The operation cannot be performed on multiple Option Sets. Please use single Option Set as result type.</value>
+    <comment>Error Message. Used when formula columns use multiple optionsets as result.</comment>
+  </data>
 </root>
